--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Daniel Juarez's Personal Website Project</title>
 
-		// bootstrap dependencies taken from https://getbootstrap.com/docs/4.3/getting-started/introduction/
+		<!--bootstrap dependencies taken from https://getbootstrap.com/docs/4.3/getting-started/introduction/-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -57,7 +57,7 @@
 						<span class="input-group-text"></span>
 						<i class="fa fa-envelop" aria-hidden="true"></i>
 					</div>
-					<input type="email" class="form-control" id="inputEmail" placeholder="you@email.com">
+					<input type="email" class="form-control" id="inputEmail" placeholder="You@email.com">
 				</div>
 			</div>
 			<div class="form-group">
@@ -68,7 +68,7 @@
 						<i class="fa fa-pencil" aria-hidden="true"></i>
 					</div>
 					<input type="text" class="form-control" id="contactSubject" name="contactSubject"
-							 placeholder="subject">
+							 placeholder="Subject">
 				</div>
 			</div>
 			<div class="form-group">
@@ -86,7 +86,14 @@
 			<!-- reCAPTCHA required stuff-->
 			<div class="g-recaptcha" data-sitekey="6LdZ6rIUAAAAAH_Tkiwk8zB0qFALMtt6n3aMbIRS"></div>
 
-
+			<button class="btn btn-success" type="submit"><i class=""fa fa-paper-plane></i>Send</button>
+			<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
 		</form>
+		<!--empty area for form error/success output-->
+		<div class="row">
+			<div class="col-xs-12">
+				<div id="output-area"></div>
+			</div>
+		</div>
 	</body>
 </html>
