--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,11 +6,14 @@
 
 		<!--bootstrap dependencies taken from https://getbootstrap.com/docs/4.3/getting-started/introduction/-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!--		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<!--integrates open iconic for some icons I need-->
 		<link href="/public_html/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+
+
 
 		<!-- jQuery Form, Additional Methods, Validate -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
@@ -18,7 +21,7 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
 
 		<!-- Your JavaScript Form Validator -->
-		<script src="../js/form-validate.js"></script>
+		<script src="js/form-validate.js"></script>
 
 		<!-- Google reCAPTCHA -->
 		<script src='https://www.google.com/recaptcha/api.js'></script>
@@ -41,7 +44,7 @@
 				</div>
 			</div>
 		</div>
-		<form id="daniel-contact-form" action="php/index.php" method="post">
+		<form id="daniel-contact-form" action="../php/index.php" method="post">
 			<div class="form-group">
 				<label for="inputName">Name*</label>
 				<div class="input-group">
@@ -86,7 +89,7 @@
 			</div>
 
 			<!-- reCAPTCHA required stuff-->
-			<div class="g-recaptcha" data-sitekey="6LdZ6rIUAAAAAH_Tkiwk8zB0qFALMtt6n3aMbIRS"></div>
+			<div class="g-recaptcha" data-sitekey="6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk"></div>
 
 			<button class="btn btn-success" type="submit"><i class=""fa fa-paper-plane></i>Send</button>
 			<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
