--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,7 +24,7 @@
 		<script src="js/form-validate.js"></script>
 
 		<!-- Google reCAPTCHA -->
-		<script src='https://www.google.com/recaptcha/api.js'></script>
+		<script src="https://www.google.com/recaptcha/api.js"></script>
 
 	</head>
 	<body>
@@ -46,44 +46,44 @@
 		</div>
 		<form id="daniel-contact-form" action="../php/" method="post">
 			<div class="form-group">
-				<label for="contactName">Name*</label>
+				<label for="Name">Name*</label>
 				<div class="input-group">
 					<div class="input-group-prepend">
 						<span class="input-group-text"></span>
 						<i class="oi oi-person" title="person" aria-hidden="true"></i>
 					</div>
-					<input type="text" class="form-control" id="contactName" name="contactName" placeholder="Your Name">
+					<input type="text" class="form-control" id="Name" name="Name" placeholder="Your Name">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="contactEmail">Email*</label>
+				<label for="Email">Email*</label>
 				<div class="input-group">
 					<div class="input-group-prepend">
 						<span class="input-group-text"></span>
 						<i class="fa fa-envelop" aria-hidden="true"></i>
 					</div>
-					<input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="You@email.com">
+					<input type="email" class="form-control" id="Email" name="Email" placeholder="You@email.com">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for ="contactSubject">Subject</label>
+				<label for ="Subject">Subject</label>
 				<div class="input-group">
 					<div class="input-group-prepend">
 						<span class="input-group-text"></span>
 						<i class="fa fa-pencil" aria-hidden="true"></i>
 					</div>
-					<input type="text" class="form-control" id="contactSubject" name="contactSubject" name="contactSubject"
+					<input type="text" class="form-control" id="Subject" name="Subject"
 							 placeholder="Subject">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="contactMessage">Message</label>
+				<label for="Message">Message</label>
 				<div class="input-group">
 					<div class="input-group=prepend">
 						<span class="input-group-test"></span>
 						<i class="fa fa-comment" aria-hidden="true"></i>
 					</div>
-					<textarea class="form-control" rows="5" id="contactMessage" name="contactMessage"
+					<textarea class="form-control" rows="5" id="Message" name="Message"
 								 placeholder="Your Message, 2000 characters max"></textarea>
 				</div>
 			</div>
@@ -94,6 +94,7 @@
 			<button class="btn btn-success" type="submit"><i class="fa fa-paper-plane"></i>Send</button>
 			<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
 		</form>
+
 		<!--empty area for form error/success output-->
 		<div class="row">
 			<div class="col-xs-12">
