--- a/public_html/index.html
+++ b/public_html/index.html
@@ -56,13 +56,13 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="Email">Email*</label>
+				<label for="email">email*</label>
 				<div class="input-group">
 					<div class="input-group-prepend">
 						<span class="input-group-text"></span>
 						<i class="fa fa-envelop" aria-hidden="true"></i>
 					</div>
-					<input type="email" class="form-control" id="Email" name="Email" placeholder="You@email.com">
+					<input type="email" class="form-control" id="email" name="email" placeholder="You@email.com">
 				</div>
 			</div>
 			<div class="form-group">
@@ -89,7 +89,7 @@
 			</div>
 
 			<!-- reCAPTCHA required stuff-->
-			<div class="g-recaptcha" data-sitekey='6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk'></div>
+			<div class="g-recaptcha" data-sitekey="6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk"></div>
 
 			<button class="btn btn-success" type="submit"><i class="fa fa-paper-plane"></i>Send</button>
 			<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
