--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Daniel Juarez's Personal Website Project</title>
 
 		<!-- Integrates full version of jquery for json-->
@@ -9,7 +10,7 @@
 
 		<!--bootstrap dependencies taken from https://getbootstrap.com/docs/4.3/getting-started/introduction/-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<!--		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+		<!--		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<!--integrates open iconic for some icons I need-->
@@ -26,79 +27,95 @@
 		<!-- Google reCAPTCHA -->
 		<script src="https://www.google.com/recaptcha/api.js"></script>
 
+		<link rel="stylesheet" href="pwpstyle">
+
 	</head>
 	<body>
-		<div class="container-fluid">
+		<div class="container">
+			<div class="jumbotron">
+				<div class="media">
+					<div class="media-body">
+						<img src="resources/2duckpond.jpg" class="img-fluid" alt="2DuckPond">
+					</div>
+				</div>
+			</div>
+			<div class="container-fluid">
+				<div class="row text-center">
+					<div class="col-sm">
+						<h2>About Me</h2>
+					</div>
+					<div class="col-sm">
+						<h2>My Work</h2>
+					</div>
+					<div class="col-sm">
+						<h2>My Links</h2>
+					</div>
+					<div class="col-sm">
+						<h2>Contact Me</h2>
+					</div>
+				</div>
+			</div>
+			<p>
+				I'm a crazy cool cat5
+			</p>
+			<form id="daniel-contact-form" action="../php/" method="post">
+				<div class="form-group">
+					<label for="Name">Name*</label>
+					<div class="input-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"></span>
+							<i class="oi oi-person" title="person" aria-hidden="true"></i>
+						</div>
+						<input type="text" class="form-control" id="Name" name="Name" placeholder="Your Name">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="email">Email*</label>
+					<div class="input-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"></span>
+							<i class="fa fa-envelop" aria-hidden="true"></i>
+						</div>
+						<input type="email" class="form-control" id="email" name="email" placeholder="You@email.com">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for ="Subject">Subject</label>
+					<div class="input-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"></span>
+							<i class="fa fa-pencil" aria-hidden="true"></i>
+						</div>
+						<input type="text" class="form-control" id="Subject" name="Subject"
+								 placeholder="Subject">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="Message">Message</label>
+					<div class="input-group">
+						<div class="input-group=prepend">
+							<span class="input-group-test"></span>
+							<i class="fa fa-comment" aria-hidden="true"></i>
+						</div>
+						<textarea class="form-control" rows="5" id="Message" name="Message"
+									 placeholder="Your Message, 2000 characters max"></textarea>
+					</div>
+				</div>
+
+
+				<!-- reCAPTCHA required stuff-->
+				<div class="g-recaptcha" data-sitekey="6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk"></div>
+
+				<button class="btn btn-success" type="submit"><i class="fa fa-paper-plane"></i>Send</button>
+				<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
+			</form>
+
+			<!--empty area for form error/success output-->
 			<div class="row">
-				<div class="col-sm">
-					<h2>About Me</h2>
+				<div class="col-xs-12">
+					<div id="contact-form-output-area"></div>
 				</div>
-				<div class="col-sm">
-					<h2>About Me</h2>
-				</div>
-				<div class="col-sm">
-					<h2>My Links</h2>
-				</div>
-				<div class="col-sm">
-					<h2>Contact Me</h2>
-				</div>
-			</div>
-		</div>
-		<form id="daniel-contact-form" action="../php/" method="post">
-			<div class="form-group">
-				<label for="Name">Name*</label>
-				<div class="input-group">
-					<div class="input-group-prepend">
-						<span class="input-group-text"></span>
-						<i class="oi oi-person" title="person" aria-hidden="true"></i>
-					</div>
-					<input type="text" class="form-control" id="Name" name="Name" placeholder="Your Name">
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="email">email*</label>
-				<div class="input-group">
-					<div class="input-group-prepend">
-						<span class="input-group-text"></span>
-						<i class="fa fa-envelop" aria-hidden="true"></i>
-					</div>
-					<input type="email" class="form-control" id="email" name="email" placeholder="You@email.com">
-				</div>
-			</div>
-			<div class="form-group">
-				<label for ="Subject">Subject</label>
-				<div class="input-group">
-					<div class="input-group-prepend">
-						<span class="input-group-text"></span>
-						<i class="fa fa-pencil" aria-hidden="true"></i>
-					</div>
-					<input type="text" class="form-control" id="Subject" name="Subject"
-							 placeholder="Subject">
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="Message">Message</label>
-				<div class="input-group">
-					<div class="input-group=prepend">
-						<span class="input-group-test"></span>
-						<i class="fa fa-comment" aria-hidden="true"></i>
-					</div>
-					<textarea class="form-control" rows="5" id="Message" name="Message"
-								 placeholder="Your Message, 2000 characters max"></textarea>
-				</div>
-			</div>
-
-			<!-- reCAPTCHA required stuff-->
-			<div class="g-recaptcha" data-sitekey="6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk"></div>
-
-			<button class="btn btn-success" type="submit"><i class="fa fa-paper-plane"></i>Send</button>
-			<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
-		</form>
-
-		<!--empty area for form error/success output-->
-		<div class="row">
-			<div class="col-xs-12">
-				<div id="contact-form-output-area"></div>
 			</div>
 		</div>
 	</body>
