adjused some styles, just commiting because I need to checkout

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,7 +35,7 @@
 			<div class="jumbotron">
 				<div class="media">
 					<div class="media-body">
-						<img src="resources/2duckpond.jpg" class="img-fluid" alt="2DuckPond">
+						<img src="resources/2duckpond.jpg" class="img-fluid duckpic" alt="2DuckPond">
 					</div>
 				</div>
 			</div>
@@ -55,8 +55,9 @@
 					</div>
 				</div>
 			</div>
+			<h2>About Me</h2>
 			<p>
-				I'm a crazy cool cat5
+				I'm a crazy cool cat.
 			</p>
 			<form id="daniel-contact-form" action="../php/" method="post">
 				<div class="form-group">
