added different picture, adjusted somes style stuff

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,33 +32,64 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="jumbotron">
-				<div class="media">
-					<div class="media-body">
-						<img src="resources/2duckpond.jpg" class="img-fluid duckpic" alt="2DuckPond">
-					</div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" href="#">Daniel Juarez's Page</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="#">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">My Work</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">My Links</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contact Me</a>
+						</li>
+					</ul>
 				</div>
-			</div>
-			<div class="container-fluid">
-				<div class="row text-center">
-					<div class="col-sm">
-						<h2>About Me</h2>
-					</div>
-					<div class="col-sm">
-						<h2>My Work</h2>
-					</div>
-					<div class="col-sm">
-						<h2>My Links</h2>
-					</div>
-					<div class="col-sm">
-						<h2>Contact Me</h2>
-					</div>
+			</nav>
+			<div class="media">
+				<div class="media-body">
+					<img src="resources/bikeCart.jpg" class="img-fluid" alt="bike cart" title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
 			<h2>About Me</h2>
 			<p>
-				I'm a crazy cool cat.
+				A bike connected to a shopping cart? You're probably thinking the same as I was when I took this picture, namely, "Hey, that's a good idea".
+				<br>
+				And it is. While this might have been intended as some avante-garde art-piece, or as a joke, the fact of the matter is that it's a perfectly functional bike trailer. Sure, you could go to the store and buy a fancy bike trailer purpose-built for your needs, or you could simply plop down a credit card and rent a car for a day. But what if there is no store close to you? Or you cannot afford to rent a car right now?
+				<br>
+				No, there's nothing wrong with conventional solutions. But what happens when you do not have the exact resources you need? Just like the person who created this ingenious "bike-cart", McGyver, and the crew of and team behind Apollo 13 (who had to figure out how to literally fit a <a href="https://gizmodo.com/this-is-the-actual-hack-that-saved-the-astronauts-of-th-1598385593">square peg in a round hole </a> with supplies available on the spacecraft), I have learned the importance of two things in my time working in IT, as an EMT, and in Web Development:
+				<ol>
+					<li>
+						It is always possible to "improvise, adapt, and overcome"
+					</li>
+					<li>
+						If it's stupid and it works, it's not stupid
+					</li>
+				</ol>
+				Whether it comes down to creating a pelvic binder out of a blanket and a strong stick, irrigating eyes with a bag of normal saline and big syringe from a Combitube, or helping your company build innovative web-apps and pages, I'm your guy. My name is Daniel Juarez, and I'm ready and able to help you solve problems.
 			</p>
+		<h2>My Work</h2>
+		<div class="row">
+			<div class="card" style="width: 18rem;">
+				<img class="card-img-top" src="..." alt="Card image cap">
+				<div class="card-body">
+					<h5 class="card-title"></h5>
+					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+
+
+
 			<form id="daniel-contact-form" action="../php/" method="post">
 				<div class="form-group">
 					<label for="Name">Name*</label>
