--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,66 +27,66 @@
 		<!-- Google reCAPTCHA -->
 		<script src="https://www.google.com/recaptcha/api.js"></script>
 
-		<link rel="stylesheet" href="pwpstyle">
+		<link rel="stylesheet" href="pwpstyle.css">
 
 	</head>
 	<body>
 		<div class="container">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">Daniel Juarez's Page</a>
+			<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+				<a class="navbar-brand" href="#">Daniel Juarez</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="#">About Me</a>
+							<a class="nav-link" href="#about-me">About Me</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">My Work</a>
+							<a class="nav-link" href="#my-work">My Work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">My Links</a>
+							<a class="nav-link" href="#my-links">My Links</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Contact Me</a>
+							<a class="nav-link" href="#daniel-contact-form">Contact Me</a>
 						</li>
 					</ul>
 				</div>
 			</nav>
 			<div class="media">
 				<div class="media-body">
-					<img src="resources/bikeCart.jpg" class="img-fluid" alt="bike cart" title="Yes, it's a bike attached to a shopping cart">
+					<img src="resources/bikeCart.jpg" class="img-fluid bikeCart " alt="bike cart" title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
-			<h2>About Me</h2>
+			<h2 id="about-me">About Me</h2>
 			<p>
 				A bike connected to a shopping cart? You're probably thinking the same as I was when I took this picture, namely, "Hey, that's a good idea".
 				<br>
-				And it is. While this might have been intended as some avante-garde art-piece, or as a joke, the fact of the matter is that it's a perfectly functional bike trailer. Sure, you could go to the store and buy a fancy bike trailer purpose-built for your needs, or you could simply plop down a credit card and rent a car for a day. But what if there is no store close to you? Or you cannot afford to rent a car right now?
+				And it is. While this might have been intended as some avante-garde art-piece, or as a joke, the fact of the matter is that it's a perfectly functional bike trailer. Sure, you could go to the store and buy a fancy bike trailer purpose-built for your needs, or you could simply plop down a credit card and rent a car for a day. But what if there is no store close to you? Or you can't afford to rent a car right now?
 				<br>
-				No, there's nothing wrong with conventional solutions. But what happens when you do not have the exact resources you need? Just like the person who created this ingenious "bike-cart", McGyver, and the crew of and team behind Apollo 13 (who had to figure out how to literally fit a <a href="https://gizmodo.com/this-is-the-actual-hack-that-saved-the-astronauts-of-th-1598385593">square peg in a round hole </a> with supplies available on the spacecraft), I have learned the importance of two things in my time working in IT, as an EMT, and in Web Development:
-				<ol>
-					<li>
-						It is always possible to "improvise, adapt, and overcome"
-					</li>
-					<li>
-						If it's stupid and it works, it's not stupid
-					</li>
-				</ol>
-				Whether it comes down to creating a pelvic binder out of a blanket and a strong stick, irrigating eyes with a bag of normal saline and big syringe from a Combitube, or helping your company build innovative web-apps and pages, I'm your guy. My name is Daniel Juarez, and I'm ready and able to help you solve problems.
+				No, there's nothing wrong with conventional solutions. But if you don't have the exact resources you need, you can always create a bike-cart. <span title="The good one, not the one with Lucas Till"><i>McGyver</i></span>, the crew of and team behind Apollo 13 (who had to figure out how to literally fit a <a href="https://gizmodo.com/this-is-the-actual-hack-that-saved-the-astronauts-of-th-1598385593">square peg in a round hole </a> with supplies available on the spacecraft) as well as my time working in IT, as an EMT, and in Web Development, have taught me two important lessons:
+			<ol>
+				<li>
+					It is always possible to "improvise, adapt, and overcome"
+				</li>
+				<li>
+					If it's stupid and it works, it's not stupid
+				</li>
+			</ol>
+			Whether it comes down to creating a pelvic binder out of a blanket and a big stick, irrigating someone's eyes with a bag of normal saline and extra-large syringe, or helping your company build innovative web-apps and pages, I'm your guy. My name is Daniel Juarez, and I'm an entry-level web developer ready and able to help you solve problems.
 			</p>
-		<h2>My Work</h2>
-		<div class="row">
-			<div class="card" style="width: 18rem;">
-				<img class="card-img-top" src="..." alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title"></h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+			<h2>My Work</h2>
+			<div class="row">
+				<div class="card" style="width: 18rem;">
+					<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Peep</h5>
+						<p class="card-text">"Peep" is webapp that my group, "Birbs" created during my time attending the CNM Fullstack Web Development program. Using data from the eBirds API, it allows users to keep track of their bird sightings around New Mexico. </p>
+						<a href="#" class="btn btn-primary">Check It Out!</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
 
 
