adjusted some styles

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,8 +40,8 @@
 
 	</head>
 	<body>
-		<div class="container">
-			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+		<div class="container border border-primary">
+			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="#">Daniel Juarez, Fullstack Web Developer</a>
 
@@ -194,8 +194,8 @@
 					<!-- reCAPTCHA required stuff-->
 					<div class="g-recaptcha" data-sitekey="6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk"></div>
 
-					<button class="btn btn-success" type="submit"><i class="fa fa-paper-plane"></i>Send</button>
-					<button class="btn btn-warning" type="reset"><i class="fa fa-ban"></i>Reset</button>
+					<button class="btn sendButton" type="submit">Send</button>
+					<button class="btn resetButton" type="reset">Reset</button>
 				</form>
 
 				<!--empty area for form error/success output-->
