added some images for use in links section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,7 +43,7 @@
 		<div class="container border border-primary">
 			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#">Daniel Juarez, Fullstack Web Developer</a>
+					<a class="navbar-brand " href="#">Daniel Juarez's Page</a>
 
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 							  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,13 +67,13 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="media">
+			<div class="media pt-3">
 				<div class="media-body">
 					<img src="resources/bikeCart.jpg" class="img-fluid bikeCart " alt="bike cart"
 						  title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
-			<div class="Me-section container">
+			<div class="me-section container my-2">
 				<h2 id="about-me">About Me</h2>
 				<p>
 					You may ask, "What does a bike connected to a shopping cart have to do with web development?"
@@ -97,7 +97,7 @@
 				My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
-			<div class="work-section container">
+			<div class="work-section container my-2">
 				<h2 id="my-work">My Work</h2>
 				<div class="row">
 					<div class="card mx-auto" style="width: 17rem;">
@@ -143,7 +143,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="contact-section container">
+			<div class="contact-section container my-2">
 				<h2 id="contact-me">Contact Me!</h2>
 				<form id="daniel-contact-form" action="../php/" method="post">
 					<div class="form-group">
@@ -207,9 +207,29 @@
 			</div>
 			<div class="Link-Section container">
 				<h2 id="my-links">My Links</h2>
-			</div>
+				<div class="row">
+					<div class="card mx-auto" style="width: 17rem;">
+						<img class="card-img-top img-thumbnail" src="resources/githubLogo.JPG" alt="My-Github">
+						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
+					</div>
+					<div class="card mx-auto" style="width: 17rem;">
+						<img class="card-img-top img-thumbnail" src="resources/resume.png" alt="My-Resume">
+						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo" class="btn btn-primary">My Resume</a>
+					</div>
+					<div class="card mx-auto" style="width: 17rem;">
+						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+						<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
+							Out!</a>
+					</div>
+					<div class="card mx-auto" style="width: 17rem;">
+						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+						<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
+							Out!</a>
+					</div>
 
-		</div>
+				</div>
+
+			</div>
 
 
 	</body>
