--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,17 +40,16 @@
 
 	</head>
 	<body>
-		<div class="container border border-primary">
-			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
+		<div class="container border">
+			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary text-white">
 				<div class="navbar-header">
-					<a class="navbar-brand " href="#">Daniel Juarez's Page</a>
-
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 							  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
+					<a class="navbar-brand px-3" href="#">Daniel Juarez, Web Dev</a>
 				</div>
-				<div class="collapse navbar-collapse" id="navbarNav">
+				<div class="collapse navbar-collapse" id="navbarNav" >
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="#about-me">About Me</a>
@@ -58,12 +57,12 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#my-work">My Work</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#my-links">My Links</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#contact-me">Contact Me</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#my-links">My Links</a>
 					</ul>
 				</div>
 			</nav>
@@ -73,15 +72,15 @@
 						  title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
-			<div class="me-section container my-2">
-				<h2 id="about-me">About Me</h2>
+			<div class="me-section container py-2" id="about-me">
+				<h2 >About Me</h2>
 				<p>
 					You may ask, "What does a bike connected to a shopping cart have to do with web development?"
 					<br>
 					Well, as you know, web development is all about solving problems. The problem can be figuring out how to
 					most effectively advertise your business, or it can be finding a way to talk with your far-flung friends
 					and family, but that root cause is always there.
-					<br>I took this picture because I recognized, that like <span
+					<br>I took this picture because I recognized, that, like <span
 					title="The good one, not the one with Lucas Till"><i>McGyver</i></span>, the crew of and team behind
 					Apollo 13 (who had to figure out how to literally fit a <a
 					href="https://gizmodo.com/this-is-the-actual-hack-that-saved-the-astronauts-of-th-1598385593">square peg
@@ -97,7 +96,7 @@
 				My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
-			<div class="work-section container my-2">
+			<div class="work-section container py-2">
 				<h2 id="my-work">My Work</h2>
 				<div class="row">
 					<div class="card mx-auto" style="width: 17rem;">
@@ -143,7 +142,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="contact-section container my-2">
+			<div class="contact-section container py-2">
 				<h2 id="contact-me">Contact Me!</h2>
 				<form id="daniel-contact-form" action="../php/" method="post">
 					<div class="form-group">
@@ -205,31 +204,26 @@
 					</div>
 				</div>
 			</div>
-			<div class="Link-Section container">
+			<div class="Link-Section container py-2">
 				<h2 id="my-links">My Links</h2>
 				<div class="row">
-					<div class="card mx-auto" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/githubLogo.JPG" alt="My-Github">
-						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
-					</div>
 					<div class="card mx-auto" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/resume.png" alt="My-Resume">
 						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo" class="btn btn-primary">My Resume</a>
 					</div>
 					<div class="card mx-auto" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
-						<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
-							Out!</a>
+						<img class="card-img-top img-thumbnail" src="resources/githubLogo.JPG" alt="My-Github">
+						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
 					</div>
 					<div class="card mx-auto" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
-						<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
-							Out!</a>
+						<img class="card-img-top img-thumbnail" src="resources/linkedin.png" alt="LinkedIn">
+						<a target="_blank" href="https://www.linkedin.com/in/danielpjuarez/" class="btn btn-primary">My LinkedIn</a>
 					</div>
-
 				</div>
 
 			</div>
+
+		</div>
 
 
 	</body>
